--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
 
     },
     "rules": {
-        "no-unused-vars": "off"
+        "no-unused-vars": "off",
+        "no-trailing-spaces": 0
     }
 }
